--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "empleados-api",
   "version": "1.0.0",
-  "description": "API de empleados para formulario y consultas",
+  "description": "API de candidatos/empleados para formulario y consultas",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "cloudinary": "^1.41.3",
+    "streamifier": "^0.1.1"
   }
 }
+
